--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html"><b>HOME</b></a></li>
                 <li>
-                    <a href = "#" class = "color-animation"><f> Destinatii ⮟</f></a>
+                    <a href = "#" class = "color-animation"><f> Destinatii ↓</f></a>
                       <ul class = "dropdown">
                         <li><a href="pagina1.html">Spania</a></li>
                         <li><a href="pagina2.html">UK</a></li>
