--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section id="featured-destination" class="animated zoomIn">
                 <h3><r>"Ne place mai venim": UK, Londra</r></h3>
                 <div class="destination-info">  
-                    <img src="d.jpg" sizes="" alt="Paris, France">
+                    <img src="d.jpg" width="300px" alt="Paris, France">
                     <hr
                     <p><b>Londra, capitala Regatului Unit, este un oraș vibrant și divers, recunoscut pe plan global pentru istoria sa bogată, cultura efervescentă și peisajul său urban distinctiv. Cu o moștenire ce se întinde pe mii de ani, Londra găzduiește unele dintre cele mai faimoase atracții turistice din lume, precum Palatul Buckingham, Turnul Londrei și Podul Tower Bridge. De la muzeele sale impresionante, cum ar fi Muzeul Britanic și Galeria Tate Modern, la teatrele de renume mondial din West End și la parcurile sale regale, precum Hyde Park, Londra oferă o experiență culturală și istorică captivantă pentru vizitatori din întreaga lume. Orașul este, de asemenea, un centru financiar și comercial de importanță globală, fiind unul dintre cele mai influente hub-uri economice din lume. Londra reprezintă un loc al contrastelor, unde tradiția se împletește armonios cu inovația, iar diversitatea culturală este celebrată în fiecare colț al său.</b></p>
                     <a href="https://ro.wikipedia.org/wiki/Londra" class="btn">Pentru mai multe</a>
@@ -58,8 +58,8 @@
                 <div class="blog-post">
                     
                     <div class ="container">
-                        <img class = "flex-image" src="f.jpg" id="Post1">
-                   <img class = "flex-image" src="g.jpg" id="Post2">
+                        <img class = "flex-image"width="300px" src="f.jpg" id="Post1">
+                   <img class = "flex-image" src="g.jpg" width="300px"id="Post2">
                     </div>
             </section>
 
