--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html"><f>HOME</f></a></li>
                 <li>
-                    <a href = "#" class = "color-animation"><b> Destinatii ⮟</b></a>
+                    <a href = "#" class = "color-animation"><b> Destinatii ⬇️</b></a>
                       <ul class = "dropdown">
                         <li><a href="pagina1.html">Spania</a></li>
                         <li><a href="pagina2.html">UK</a></li>
